<resources>
    <string name="app_name">Ride Chef</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_location">Your Location</string>
    <string name="_1373_emily_renzelli_boulevard_monterey_ca_california_95940">1373 Emily Renzelli Boulevard, Monterey, CA, California, 95940</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="change_location">Change Location</string>
    <string name="enter_mobile_number">Area Code &amp; Mobile Number</string>
    <string name="please_enter_your_mobile_number_to_verify_your_account">Please enter your mobile number to verify your account.</string>
    <string name="what_s_your_mobile_number">What\'s your Mobile number ?</string>
    <string name="by_signing_up_you_agree_to">By Signing up you agree to </string>
    <string name="skip_this_step_for_now">Skip this step for now</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify_your_number">Verify your Number</string>
    <string name="change">Change</string>
    <string name="continue_text">Continue</string>
    <string name="we_send_4_digit_no_text">We’ve sent a 4 digit code on your registered mobile number</string>
    <string name="use_current_location">Use current location</string>
    <string name="_30_off">30% OFF</string>
    <string name="cuisine">Cuisine</string>
    <string name="search_cuisines">Search Cuisines</string>
    <string name="deliver_to">Deliver to</string>
    <string name="trending_cuisines">Trending Cuisines</string>
    <string name="view_all">View All</string>
    <string name="featured_restaurants">Featured Restaurants</string>
    <string name="trending_restaurants">Trending Restaurants</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="your_location_capital">YOUR LOCATION</string>
    <string name="notifications">Notifications</string>
    <string name="you_have_item_saved_in_your_cart">You have item saved in your cart</string>
    <string name="view">View</string>
    <string name="max_file_size_5_mb_file_type_jpg_amp_png"><![CDATA[Max file size 5 MB (file type .jpg & .png)]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="our_menu">Our Menu</string>
    <string name="get_50_off">Get 50% Off</string>
    <string name="submit">Submit</string>
    <string name="save_changes">Save Changes</string>
    <string name="search_restaurant">Search Restaurant</string>
    <string name="my_favorites">My Favorites</string>
    <string name="delivered">Delivered</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="edit">Edit</string>
    <string name="my_order">My Order</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="saved_address">Saved Address</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="ridechef">RideChef</string>
    <string name="about_us">About Us</string>
    <string name="notification_title">RideChef</string>
    <string name="notification_message">When you\'re order food with us,your location is being collected for faster delivery and safety features.Manage permissions in your device\'s location settings</string>
    <string name="ticker_text">Ticker</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non-Veg</string>
    <string name="add">+Add</string>
    <string name="dish">Dish</string>
    <string name="quantity">Quantity</string>
    <string name="please_select_any_one_option">Please select any one option</string>
    <string name="add_on">Add on</string>
    <string name="peoples_also_add_this">Peoples also add this</string>
    <string name="delivery_location">Delivery location</string>
    <string name="restaurant">Restaurant</string>
    <string name="dishes">Dishes</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="add_a_tip_for_rider">Add a Tip for rider</string>
    <string name="enter_tip_amount">Enter tip amount</string>
    <string name="bill_details">Bill Details</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="tax_fee"><![CDATA[Tax & Fee]]></string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="item_total">Item Total</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="suggestions">Suggestions</string>
    <string name="type_here">Type Here..</string>
    <string name="enter_massage">ENTER MASSAGE</string>
    <string name="check_out">Check Out</string>
    <string name="my_cart">My Cart</string>
    <string name="available_coupon">Available Coupon</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="apply">Apply</string>
    <string name="add_address">+ Add Address</string>
    <string name="complete_address">COMPLETE ADDRESS</string>
    <string name="house_no_flat_no_floor">House No. / Flat no. / Floor</string>
    <string name="landmark_optional">LANDMARK (OPTIONAL)</string>
    <string name="pincode">PINCODE</string>
    <string name="near_about_you">Near about you</string>
    <string name="home">Home</string>
    <string name="save_location">Save Location</string>
    <string name="save_as">Save as</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="enter_address_details">Enter Address Details</string>
    <string name="menu">Menu</string>
    <string name="search_dishes">Search Dishes</string>
    <string name="order_successfully_placed">Order Successfully Placed</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="waiting_for_the_restaurant_to_confirm_your_order">Waiting for the restaurant to confirm your order.</string>
    <string name="track_order">Track order</string>
    <string name="please_provide_this_otp_our_delivery_executive_it_ll_help_us_validate_delivery">Please provide this OTP our delivery executive, It\'ll help us validate delivery</string>
    <string name="your_otp">Your OTP</string>
    <string name="call">Call</string>
    <string name="_30_min">30 Min</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="preparing">Preparing</string>
    <string name="item_ordered">Item Ordered</string>
    <string name="half">Half</string>
    <string name="order_status">Order Status</string>
    <string name="picked_up">Picked up</string>
    <string name="delivery_from">Deliver from</string>
    <string name="personal_details">Personal Details</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="enter_dob">ENTER DOB</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="done">Done</string>
    <string name="select_image">Select Image</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="pay_now">Pay Now</string>
    <string name="thank_you_for_order_with_ridechef_stay_connected_with_order_info">Thank you for order with Ridechef, stay Connected with order info</string>
    <string name="terms_conditions">Terms &amp; Conditions></string>
    <string name="no_coupon_found">No Coupon Available</string>

    //Stripe key
    <string name="stripe_development_key" translatable="false">pk_test_51K9bN4HMUfVn5kyKLy8dxISU3UALWyDzn6upbpLTZlFtMR28Jxzbzd5KQRaJWFqShlp96cqFo0b4S0TyJwiq4cEu00gf3y4jdb</string>
    <string name="stripe_production_key" translatable="false">pk_test_51HWP2ZK7D70fnsRhID7o1orBteyG1D6ZdMfysXSXFzM2U7GCps1kb35LuJwdabZZvgleenko4FVxqWs0c1gO17oK00j0rMzNIJ</string>

    <string name="how_can_we_help">How can we help ?</string>
    <string name="search_faqs">Search FAQs</string>
    <string name="faqs">FAQs</string>

</resources>