<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".view.screens.LoginScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="90dp"
                android:src="@mipmap/ride_chef_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/airbnb_cereal_bold"
                android:text="@string/what_s_your_mobile_number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:fontFamily="@font/airbnb_cereal_book"
                android:text="@string/please_enter_your_mobile_number_to_verify_your_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_autoDetectCountry="false"
                    app:ccp_contentColor="@color/white"
                    app:ccp_defaultNameCode="US"
                    app:ccp_padding="0dp"
                    app:ccp_showArrow="true"
                    app:ccp_showFlag="false"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="true" />

                <EditText
                    android:id="@+id/editText_carrierNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnb_cereal_medium"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="723 473 6835" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>