<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.screens.cms.HelpAndSupport">

        <include
            android:id="@+id/appBarId"
            layout="@layout/app_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/airbnb_cereal_medium"
            android:text="@string/enter_massage"
            android:textSize="13sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Message"
            android:lines="20"
            android:minLines="6"
            android:gravity="top|start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:layout_marginHorizontal="22dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/round_brown_edit_text"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/airbnb_cereal_medium"
            android:text="ADD SCREENSHOTS (OPTIONAL)"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:fontFamily="@font/airbnb_cereal_book"
            android:text="@string/max_file_size_5_mb_file_type_jpg_amp_png"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:src="@mipmap/file_placeholder" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:src="@mipmap/file_placeholder" />

        </LinearLayout>


        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <Button
            style="@style/buttonStyleRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/submit" />

    </LinearLayout>
</layout>